cocos2d-x-3.0rc0 Feb.?? 2014
[All]
     [NEW]          Action: RotateBy supports 3D rotations
     [NEW]          Bindings: Using python to automatically generate script bindings
     [NEW]          Bindings: Added JS bindings support for Linux
     [NEW]          Console: Added 'resolution', 'projection' commands. Improved API
     [NEW]          Console: Added more commands: director resume|pause|stopanimation|startanimation.
     [NEW]          Console: Added command: 'touch tap|swipe' to simulating touch events.
     [NEW]          Console: Added command: 'upload filename filesize' to upload a file to writable path.
     [NEW]          Director: Displays 'Vertices drawn' in the stats. Useful to measure performance.
     [NEW]          Node: Added set/get Position3D() and set/get Rotation3D()
                    Node: Calculates rotation X and Y correctly.
                    Node: set/get VertexZ() -> set/get PositionZ()
                    Node: setRotationX() -> setRotationSkewX()
                    Node: setRotationY() -> setRotationSkewY()
                    Node: visit() and draw() new arguments: Renderer, parentTransform, and whether or not the parentTransform has changed since the last frame
     [NEW]          Language: Added Dutch support.
     [NEW]          Sprite: Added auto-culling support. Performance increased in about 100% when many sprites are outside the screen
     
     [FIX]          spine::Skeleton would not be updated after being re-added to scene.
     [FIX]          Loading custom fonts from ttf file fails on windows.
     [FIX]          FadeIn and FadeOut behaviours is incorrect if it doesn't start from an edge value( 0 or 255).
     [FIX]          Renderer: Expand textureID bit from 18bits to 32bits. Resolves probably crash on Linux / Android.
     [FIX]          Potential crash by switching repeatly between HttpClientTest, WebSocketTest, SocketIOTest.
     [FIX]          Can not use Node::setPhysicsBody to reset a physics body.